--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Karla:ital,wght@0,200..800;1,200..800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Karla:ital,wght@0,200..800;1,200..800&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -25,5 +25,42 @@
 }
 
 .sub-headline-deco {
-  @apply uppercase mx-4 tracking-widest text-gray-600 text-sm;
+  @apply uppercase mx-4 tracking-widest text-gray-600 text-xs lg:text-sm text-center;
+}
+
+/* parallax */
+#root {
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: auto;
+  perspective: 2px;
+}
+
+.parallax-section,
+.no-parallax {
+  display: flex;
+  align-item: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.parallax-section {
+  position: relative;
+  z-index: -1;
+  height: 100vh;
+    transform-style: preserve-3d;
+}
+.no-parallax {
+  height: auto;
+  z-index: 999;
+  background: white;
+}
+.parallax-image {
+  position: absolute;
+  width: 101%;
+  height: 100%;
+  z-index: -1;
+  background-size: cover;
+  background-position: center;
+  transform: translateZ(-1px) scale(1.5);
 }
