--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Karla:ital,wght@0,200..800;1,200..800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Karla:ital,wght@0,200..800;1,200..800&display=swap");
 
 *, ::before, ::after{
   --tw-border-spacing-x: 0;
@@ -572,10 +572,6 @@ video {
   left: 50%;
 }
 
-.left-\[calc\(-50vw\+50\%\)\]{
-  left: calc(-50vw + 50%);
-}
-
 .right-2{
   right: 0.5rem;
 }
@@ -609,6 +605,10 @@ video {
   margin-bottom: 1.25rem;
 }
 
+.mb-10{
+  margin-bottom: 2.5rem;
+}
+
 .mb-2{
   margin-bottom: 0.5rem;
 }
@@ -621,6 +621,10 @@ video {
   margin-bottom: 0.75rem;
 }
 
+.mb-4{
+  margin-bottom: 1rem;
+}
+
 .mb-5{
   margin-bottom: 1.25rem;
 }
@@ -629,8 +633,16 @@ video {
   margin-bottom: 1.5rem;
 }
 
+.mb-8{
+  margin-bottom: 2rem;
+}
+
 .ml-16{
   margin-left: 4rem;
+}
+
+.mt-2{
+  margin-top: 0.5rem;
 }
 
 .mt-5{
@@ -639,30 +651,6 @@ video {
 
 .mt-8{
   margin-top: 2rem;
-}
-
-.mb-4{
-  margin-bottom: 1rem;
-}
-
-.mb-10{
-  margin-bottom: 2.5rem;
-}
-
-.ml-4{
-  margin-left: 1rem;
-}
-
-.ml-2{
-  margin-left: 0.5rem;
-}
-
-.mt-2{
-  margin-top: 0.5rem;
-}
-
-.mb-8{
-  margin-bottom: 2rem;
 }
 
 .inline-block{
@@ -702,6 +690,10 @@ video {
   height: 300px;
 }
 
+.h-\[30px\]{
+  height: 30px;
+}
+
 .h-\[350px\]{
   height: 350px;
 }
@@ -722,48 +714,20 @@ video {
   height: 100%;
 }
 
-.h-\[30px\]{
-  height: 30px;
-}
-
-.h-\[10px\]{
-  height: 10px;
-}
-
-.h-\[80px\]{
-  height: 80px;
-}
-
-.h-\[\]{
-  height: ;
-}
-
-.h-\[53\.6px\]{
-  height: 53.6px;
-}
-
-.h-\[54px\]{
-  height: 54px;
-}
-
-.h-\[50px\]{
-  height: 50px;
-}
-
-.h-\[90px\]{
-  height: 90px;
+.min-h-\[350px\]{
+  min-height: 350px;
 }
 
 .w-5{
   width: 1.25rem;
 }
 
-.w-\[100px\]{
-  width: 100px;
+.w-\[100\%\]{
+  width: 100%;
 }
 
-.w-\[100vw\]{
-  width: 100vw;
+.w-\[100px\]{
+  width: 100px;
 }
 
 .w-\[95\%\]{
@@ -779,42 +743,6 @@ video {
   width: max-content;
 }
 
-.w-\[3\]{
-  width: 3;
-}
-
-.w-\[30px\]{
-  width: 30px;
-}
-
-.w-\[350px\]{
-  width: 350px;
-}
-
-.w-\[300px\]{
-  width: 300px;
-}
-
-.w-\[60\%\]{
-  width: 60%;
-}
-
-.w-\[6md0\%\]{
-  width: 6md0%;
-}
-
-.w-\[80\%\]{
-  width: 80%;
-}
-
-.w-\[100\%\]{
-  width: 100%;
-}
-
-.max-w-screen-xl{
-  max-width: 1280px;
-}
-
 .grow{
   flex-grow: 1;
 }
@@ -827,6 +755,10 @@ video {
   flex-basis: 33.333333%;
 }
 
+.basis-1\/5{
+  flex-basis: 20%;
+}
+
 .basis-1\/6{
   flex-basis: 16.666667%;
 }
@@ -835,28 +767,16 @@ video {
   flex-basis: 66.666667%;
 }
 
-.basis-4\/6{
-  flex-basis: 66.666667%;
-}
-
-.basis-1\/4{
-  flex-basis: 25%;
-}
-
-.basis-3\/4{
-  flex-basis: 75%;
+.basis-2\/6{
+  flex-basis: 33.333333%;
 }
 
 .basis-4\/5{
   flex-basis: 80%;
 }
 
-.basis-1\/5{
-  flex-basis: 20%;
-}
-
-.basis-2\/6{
-  flex-basis: 33.333333%;
+.basis-4\/6{
+  flex-basis: 66.666667%;
 }
 
 .-translate-x-1\/2{
@@ -896,8 +816,16 @@ video {
   justify-content: space-between;
 }
 
+.gap-10{
+  gap: 2.5rem;
+}
+
 .gap-3{
   gap: 0.75rem;
+}
+
+.gap-4{
+  gap: 1rem;
 }
 
 .gap-5{
@@ -908,18 +836,6 @@ video {
   gap: 20px;
 }
 
-.gap-8{
-  gap: 2rem;
-}
-
-.gap-10{
-  gap: 2.5rem;
-}
-
-.overflow-hidden{
-  overflow: hidden;
-}
-
 .rounded-full{
   border-radius: 9999px;
 }
@@ -928,16 +844,17 @@ video {
   border-width: 2px;
 }
 
-.border{
-  border-width: 1px;
-}
-
 .border-\[1px\]{
   border-width: 1px;
 }
 
 .border-solid{
   border-style: solid;
+}
+
+.border-gray-700{
+  --tw-border-opacity: 1;
+  border-color: rgb(55 65 81 / var(--tw-border-opacity, 1));
 }
 
 .border-red-500{
@@ -950,26 +867,6 @@ video {
   border-color: rgb(100 116 139 / var(--tw-border-opacity, 1));
 }
 
-.border-slate-700{
-  --tw-border-opacity: 1;
-  border-color: rgb(51 65 85 / var(--tw-border-opacity, 1));
-}
-
-.border-white{
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
-}
-
-.border-gray-700{
-  --tw-border-opacity: 1;
-  border-color: rgb(55 65 81 / var(--tw-border-opacity, 1));
-}
-
-.border-b-white{
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
-}
-
 .bg-gray-500{
   --tw-bg-opacity: 1;
   background-color: rgb(107 114 128 / var(--tw-bg-opacity, 1));
@@ -978,6 +875,10 @@ video {
 .bg-gray-900{
   --tw-bg-opacity: 1;
   background-color: rgb(17 24 39 / var(--tw-bg-opacity, 1));
+}
+
+.bg-inherit{
+  background-color: inherit;
 }
 
 .bg-red-700{
@@ -995,16 +896,8 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
-.bg-inherit{
-  background-color: inherit;
-}
-
 .bg-opacity-50{
   --tw-bg-opacity: 0.5;
-}
-
-.bg-opacity-0{
-  --tw-bg-opacity: 0;
 }
 
 .bg-\[url\(\'\.\.\/img\/coffee-bg-2\.jpg\'\)\]{
@@ -1075,10 +968,6 @@ video {
   background-size: cover;
 }
 
-.bg-fixed{
-  background-attachment: fixed;
-}
-
 .bg-center{
   background-position: center;
 }
@@ -1087,21 +976,13 @@ video {
   background-repeat: no-repeat;
 }
 
-.p-4{
-  padding: 1rem;
+.object-cover{
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .p-6{
   padding: 1.5rem;
-}
-
-.p-5{
-  padding: 1.25rem;
-}
-
-.px-10{
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
 }
 
 .px-2{
@@ -1119,19 +1000,31 @@ video {
   padding-right: 1.5rem;
 }
 
+.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
 
-.py-20{
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-}
-
 .py-4{
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+
+.pb-\[60px\]{
+  padding-bottom: 60px;
+}
+
+.pl-4{
+  padding-left: 1rem;
+}
+
+.pt-20{
+  padding-top: 5rem;
 }
 
 .text-left{
@@ -1156,10 +1049,6 @@ video {
   line-height: 2.5rem;
 }
 
-.text-\[50px\]{
-  font-size: 50px;
-}
-
 .text-base{
   font-size: 1rem;
   line-height: 1.5rem;
@@ -1170,18 +1059,30 @@ video {
   line-height: 1.25rem;
 }
 
-.text-xs{
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
 
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
 .font-black{
   font-weight: 900;
+}
+
+.font-bold{
+  font-weight: 700;
+}
+
+.font-extrabold{
+  font-weight: 800;
+}
+
+.font-light{
+  font-weight: 300;
 }
 
 .font-medium{
@@ -1192,28 +1093,12 @@ video {
   font-weight: 600;
 }
 
-.font-bold{
-  font-weight: 700;
-}
-
-.font-light{
-  font-weight: 300;
-}
-
-.font-extrabold{
-  font-weight: 800;
-}
-
 .uppercase{
   text-transform: uppercase;
 }
 
 .leading-5{
   line-height: 1.25rem;
-}
-
-.leading-4{
-  line-height: 1rem;
 }
 
 .-tracking-wider{
@@ -1226,10 +1111,6 @@ video {
 
 .tracking-widest{
   letter-spacing: 0.1em;
-}
-
-.-tracking-widest{
-  letter-spacing: -0.1em;
 }
 
 .text-black{
@@ -1247,6 +1128,11 @@ video {
   color: rgb(162 95 75 / var(--tw-text-opacity, 1));
 }
 
+.text-gray-400{
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity, 1));
+}
+
 .text-gray-500{
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity, 1));
@@ -1262,9 +1148,9 @@ video {
   color: rgb(55 65 81 / var(--tw-text-opacity, 1));
 }
 
-.text-white{
+.text-gray-800{
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+  color: rgb(31 41 55 / var(--tw-text-opacity, 1));
 }
 
 .text-gray-900{
@@ -1272,14 +1158,9 @@ video {
   color: rgb(17 24 39 / var(--tw-text-opacity, 1));
 }
 
-.text-gray-800{
+.text-white{
   --tw-text-opacity: 1;
-  color: rgb(31 41 55 / var(--tw-text-opacity, 1));
-}
-
-.text-gray-400{
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity, 1));
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
 .line-through{
@@ -1297,12 +1178,12 @@ video {
   transition-duration: 150ms;
 }
 
-.duration-500{
-  transition-duration: 500ms;
-}
-
 .duration-300{
   transition-duration: 300ms;
+}
+
+.duration-500{
+  transition-duration: 500ms;
 }
 
 /* nav bar + dropdown */
@@ -1387,12 +1268,60 @@ video {
 .sub-headline-deco{
   margin-left: 1rem;
   margin-right: 1rem;
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+  text-align: center;
+  font-size: 0.75rem;
+  line-height: 1rem;
   text-transform: uppercase;
   letter-spacing: 0.1em;
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity, 1));
+}
+
+@media (min-width: 1024px){
+  .sub-headline-deco{
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+}
+
+/* parallax */
+
+#root {
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: auto;
+  perspective: 2px;
+}
+
+.parallax-section,
+.no-parallax {
+  display: flex;
+  align-item: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.parallax-section {
+  position: relative;
+  z-index: -1;
+  height: 100vh;
+  transform-style: preserve-3d;
+}
+
+.no-parallax {
+  height: auto;
+  z-index: 999;
+  background: white;
+}
+
+.parallax-image {
+  position: absolute;
+  width: 101%;
+  height: 100%;
+  z-index: -1;
+  background-size: cover;
+  background-position: center;
+  transform: translateZ(-1px) scale(1.5);
 }
 
 .placeholder\:text-xs::-moz-placeholder{
@@ -1474,28 +1403,14 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hover\:border:hover{
-  border-width: 1px;
-}
-
-.hover\:border-white:hover{
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
+.hover\:bg-cyan-400:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 211 238 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-gray-600:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(75 85 99 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-white:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-cyan-400:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(34 211 238 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:bg-opacity-45:hover{
@@ -1558,12 +1473,12 @@ video {
     margin-bottom: 0px;
   }
 
-  .md\:mt-0{
-    margin-top: 0px;
-  }
-
   .md\:ml-2{
     margin-left: 0.5rem;
+  }
+
+  .md\:mt-0{
+    margin-top: 0px;
   }
 
   .md\:flex{
@@ -1574,24 +1489,8 @@ video {
     height: 100%;
   }
 
-  .md\:h-\[\]{
-    height: ;
-  }
-
-  .md\:h-\[500px\]{
-    height: 500px;
-  }
-
   .md\:w-full{
     width: 100%;
-  }
-
-  .md\:w-\[350px\]{
-    width: 350px;
-  }
-
-  .md\:w-\[80\%\]{
-    width: 80%;
   }
 
   .md\:grid-cols-2{
@@ -1615,18 +1514,22 @@ video {
     text-align: left;
   }
 
-  .md\:text-4xl{
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
-
   .md\:text-2xl{
     font-size: 1.5rem;
     line-height: 2rem;
   }
+
+  .md\:text-4xl{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
 }
 
 @media (min-width: 1024px){
+  .lg\:mb-0{
+    margin-bottom: 0px;
+  }
+
   .lg\:flex{
     display: flex;
   }
@@ -1645,10 +1548,6 @@ video {
 
   .lg\:w-\[65\%\]{
     width: 65%;
-  }
-
-  .lg\:w-\[80\%\]{
-    width: 80%;
   }
 
   .lg\:grid-cols-2{
@@ -1675,18 +1574,12 @@ video {
     gap: 2rem;
   }
 
-  .lg\:px-48{
-    padding-left: 12rem;
-    padding-right: 12rem;
-  }
-
-  .lg\:py-40{
-    padding-top: 10rem;
-    padding-bottom: 10rem;
-  }
-
   .lg\:pl-8{
     padding-left: 2rem;
+  }
+
+  .lg\:text-\[50px\]{
+    font-size: 50px;
   }
 }
 
